--- a/orb.yml
+++ b/orb.yml
@@ -12,25 +12,29 @@ display:
   source_url: "https://github.com/hubci/goreleaser-orb"
 
 orbs:
-  os-detect: circleci/os-detect@0.2
+  ci: hubci/sphere@0.1
 
 commands:
   install:
     description: |
-      Install GoReleaser in a build (for amd64 Linux). Installs to ~/bin.
+      Install GoReleaser in a job. This command supports Linux on both amd64 and arm64. Installs to ~/bin.
     parameters:
       version:
         description: The GoReleaser version. This is a full SemVer version.
         type: string
     steps:
-      - os-detect/init
+      - ci/init
       - run:
           name: "Install GoReleaser"
           command: |
-            # This line and assuming this path is in PATH should move to os-detect at some point.
+            # Ensures the directory we need exist.
+            # Assuming this path is in PATH should move to hubci/sphere at some point.
             mkdir -p ~/bin
 
-            dlURL="https://github.com/goreleaser/goreleaser/releases/download/v<<parameters.version>>/goreleaser_Linux_x86_64.tar.gz"
+            # Get the CPU arch. This will also move to hubci/sphere in the future
+            cpuArch=$( uname -m )
+
+            dlURL="https://github.com/goreleaser/goreleaser/releases/download/v<<parameters.version>>/goreleaser_Linux_${cpuArch}.tar.gz"
             curl -sSL $dlURL | $SUDO tar -xz -C ~/bin goreleaser
   release:
     description: Run GoReleaser. Optionally without actually publishing.
